update to latest sdk-metrics (v1.12.0); fix 'npm run test:deps' for runs after some of the nested package.json files have been 'npm install'd

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint:yaml-files": "./dev-utils/lint-yaml-files.sh  # requires node >=10",
     "coverage": "COVERAGE=true ./test/script/run_tests.sh",
     "test": "./test/script/run_tests.sh",
-    "test:deps": "dependency-check index.js start.js start-next.js 'lib/**/*.js' 'test/**/*.js' '!test/activation-method/fixtures' '!test/instrumentation/azure-functions/fixtures' '!test/instrumentation/modules/next/a-nextjs-app' --no-dev -i async_hooks -i perf_hooks -i node:http -i @azure/functions-core",
+    "test:deps": "dependency-check index.js start.js start-next.js 'lib/**/*.js' 'test/**/*.js' '!test/activation-method/fixtures' '!test/instrumentation/azure-functions/fixtures' '!test/instrumentation/modules/next/a-nextjs-app' '!test/opentelemetry-bridge' '!test/opentelemetry-metrics/fixtures' --no-dev -i async_hooks -i perf_hooks -i node:http -i @azure/functions-core",
     "test:tav": "(cd test/opentelemetry-metrics/fixtures && tav --quiet) && (cd test/opentelemetry-bridge && tav --quiet) && (cd test/instrumentation/modules/next/a-nextjs-app && tav --quiet) && tav --quiet",
     "test:docs": "./test/script/docker/run_docs.sh",
     "test:types": "tsc --project test/types/tsconfig.json && tsc --project test/types/transpile/tsconfig.json && node test/types/transpile/index.js && tsc --project test/types/transpile-default/tsconfig.json && node test/types/transpile-default/index.js  # requires node >=12.20",
@@ -89,7 +89,7 @@
     "@elastic/ecs-pino-format": "^1.2.0",
     "@opentelemetry/api": "^1.4.1",
     "@opentelemetry/core": "^1.11.0",
-    "@opentelemetry/sdk-metrics": "^1.11.0",
+    "@opentelemetry/sdk-metrics": "^1.12.0",
     "after-all-results": "^2.0.0",
     "async-cache": "^1.1.0",
     "async-value-promise": "^1.1.1",
@@ -131,7 +131,6 @@
     "@fastify/formbody": "^7.0.1",
     "@hapi/hapi": "^21.0.0",
     "@koa/router": "^12.0.0",
-    "@opentelemetry/exporter-prometheus": "^0.37.0",
     "@types/node": "^18.11.9",
     "@types/pino": "^6.3.8",
     "ajv": "^7.2.4",
