fix tests (need lazy 'npm install' now with separate package); add dependabot for separate packages

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,6 +17,22 @@ updates:
       - "elastic/apm-agent-node-js"
 
   - package-ecosystem: "npm"
+    directory: "/test/opentelemetry-bridge"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 5
+    reviewers:
+      - "elastic/apm-agent-node-js"
+
+  - package-ecosystem: "npm"
+    directory: "/test/opentelemetry-metrics/fixtures"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 5
+    reviewers:
+      - "elastic/apm-agent-node-js"
+
+  - package-ecosystem: "npm"
     directory: "/examples/opentelemetry-bridge"
     schedule:
       interval: "weekly"
