--- a/examples/opentelemetry-metrics/package.json
+++ b/examples/opentelemetry-metrics/package.json
@@ -4,17 +4,8 @@
   "private": true,
   "dependencies": {
     "@opentelemetry/api": "^1.4.1",
-    "@opentelemetry/exporter-metrics-otlp-grpc": "^0.37.0",
-    "@opentelemetry/exporter-prometheus": "^0.37.0",
-    "@opentelemetry/resources": "^1.11.0",
-    "@opentelemetry/sdk-metrics": "^1.11.0",
-    "@opentelemetry/sdk-node": "^0.37.0",
-    "@opentelemetry/semantic-conventions": "^1.11.0",
-    "elastic-apm-node": "file:../..",
-    "fastify": "^4.12.0",
-    "prom-client": "^14.1.1"
-  },
-  "devDependencies": {
-    "dotenv-cli": "^7.0.0"
+    "@opentelemetry/exporter-prometheus": "^0.38.0",
+    "@opentelemetry/sdk-metrics": "^1.12.0",
+    "elastic-apm-node": "file:../.."
   }
 }
