--- a/.github/workflows/edge.yml
+++ b/.github/workflows/edge.yml
@@ -37,7 +37,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: [ "20" ]
+        node: [ "21" ]
         contextManager: [ 'patch', '' ]
     steps:
       - uses: actions/checkout@v3
@@ -45,7 +45,7 @@ jobs:
         env:
           ELASTIC_APM_CONTEXT_MANAGER: ${{ matrix.contextManager }}
 
-  # This should list all active Node.js major versions listed at:
+  # This should list all the Node.js major versions listed at:
   # https://nodejs.org/en/about/releases/
   #
   # The node.js project *sometimes* produces "rc" builds leading up to a new
@@ -57,6 +57,7 @@ jobs:
       fail-fast: false
       matrix:
         node:
+          - "20"
           - "19"
           - "18"
           - "16"
