test: workaround Azure Functions test failures on node >=18.x
Just skip them until https://github.com/Azure/azure-functions-core-tools/issues/3335
is resolved.

This also bumps the azure-functions-core-tools dep and sets up
dependabot for that package.

Refs: https://github.com/elastic/apm-agent-nodejs/issues/3279

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,14 @@ updates:
       - "elastic/apm-agent-node-js"
 
   - package-ecosystem: "npm"
+    directory: "/test/instrumentation/azure-functions/fixtures/AJsAzureFnApp"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 5
+    reviewers:
+      - "elastic/apm-agent-node-js"
+
+  - package-ecosystem: "npm"
     directory: "/test/instrumentation/modules/next/a-nextjs-app"
     schedule:
       interval: "weekly"
