--- a/.tav.yml
+++ b/.tav.yml
@@ -456,6 +456,7 @@ restify-v10-v12:
 # https://www.fastify.io/docs/latest/LTS/
 # - #1086 suggests fastify@2.4.0 was a broken release, skip it.
 # - fastify@4.0.1 is broken: https://github.com/fastify/fastify/issues/3998#issuecomment-1153662513
+# - fastify@4.16.0 - 4.16.2 (inclusive) are broken releases
 fastify-v1:
   name: fastify
   versions: '1.x'
@@ -482,7 +483,7 @@ fastify-v3:
     - node test/instrumentation/modules/fastify/set-framework.test.js
 fastify:
   name: fastify
-  versions: '>=4 <4.0.1 || >4.0.1'
+  versions: '>=4 <4.0.1 || >4.0.1 <4.16.0 || >4.16.2'
   node: '>=14.6.0'
   commands:
     - node test/instrumentation/modules/fastify/fastify.test.js
