--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "error-stack-parser": "^2.0.6",
     "escape-string-regexp": "^4.0.0",
     "fast-safe-stringify": "^2.0.7",
+    "glob": "^7.2.3",
     "http-headers": "^3.0.2",
     "is-native": "^1.0.1",
     "lru-cache": "^6.0.0",
