feat: OTel Metrics support (#3152)
With this change the APM agent adds support for using OTel Metrics in two ways:

1. The `@opentelemetry/api` package is instrumented so that usage of
   `.metrics.getMeterProvider(...)` will use one provided by the APM agent,
   if the user hasn't explicitly provided one of their own. This implementation
   uses a version of the OTel Metrics SDK included with the APM agent. It
   is configured to sent metrics to APM server by default. This allows a user
   to use the OTel Metrics API and get metrics set to APM server without any
   configuration.
2. Alternatively, the `@opentelemetry/sdk-metrics` package is instrumented so
   that when a user creates a `MeterProvider`, the APM agent will added a
   `MetricReader` that sends metrics to APM server.  This allows a user to
   configure metrics as they wish using the OTel Metrics SDK and then
   automatically get those metrics sent to APM server.

This also adds some grouping in ".ci/tav.json" for the TAV workflow to avoid the
256 jobs GH Actions limit. I'm not yet sure if those will work well.

Closes: https://github.com/elastic/apm-agent-nodejs/issues/2954
Refs: https://github.com/elastic/apm/issues/691
Refs: https://github.com/elastic/apm/pull/742 (spec PR)

--- a/.github/workflows/tav.yml
+++ b/.github/workflows/tav.yml
@@ -41,6 +41,9 @@ jobs:
       max-parallel: 30
       fail-fast: false
       matrix:
+        # A job matrix limit is 256. We do some grouping of TAV modules to
+        # stay under that limit.
+        # https://docs.github.com/en/actions/learn-github-actions/usage-limits-billing-and-administration
         node: ${{ fromJSON(needs.prepare-matrix.outputs.versions) }}
         module: ${{ fromJSON(needs.prepare-matrix.outputs.modules) }}
     steps:
