--- a/.tav.yml
+++ b/.tav.yml
@@ -521,7 +521,7 @@ aws-sdk:
     - node test/instrumentation/modules/aws-sdk/sqs.test.js
     - node test/instrumentation/modules/aws-sdk/dynamodb.test.js
 
-aws-sdk-s3-client:
+'@aws-sdk/client-s3':
   # We want this version range:
   #   versions: '>=3 <4'
   # However, @awk-sdk/client-s3 releases *very* frequently (almost every day) and there
