--- a/.tav.yml
+++ b/.tav.yml
@@ -546,7 +546,7 @@ aws-sdk:
   # Test v3.0.0, every N=41 of 210 releases, and current latest
   versions: '3.0.0 || 3.36.0 || 3.86.0 || 3.171.0 || 3.245.0 || 3.315.0 || 3.321.1 || >3.321.1 <4'
   commands:
-    - node test/instrumentation/modules/@aws-sdk/s3-v3.test.js
+    - node test/instrumentation/modules/@aws-sdk/client-s3.test.js
   node: '>=14'
 
 # - undici@4.7.0 added its diagnostics_channel support.
