--- a/.tav.yml
+++ b/.tav.yml
@@ -539,7 +539,7 @@ aws-sdk:
 
 '@aws-sdk/client-s3':
   # We want this version range:
-  #   versions: '>=3 <4'
+  #   versions: '>=3.15.0 <4'
   # However, @awk-sdk/client-s3 releases *very* frequently (almost every day) and there
   # is no need to test *all* those releases. Instead we statically list a subset
   # of versions to test.
@@ -547,8 +547,8 @@ aws-sdk:
   # Maintenance note: This should be updated periodically using:
   #   ./dev-utils/aws-sdk-s3-client-tav-versions.sh
   #
-  # Test v3.0.0, every N=41 of 210 releases, and current latest
-  versions: '3.0.0 || 3.36.0 || 3.86.0 || 3.171.0 || 3.245.0 || 3.315.0 || 3.321.1 || >3.321.1 <4'
+  # Test v3.15.0, every N=37 of 191 releases, and current latest.
+  versions: '3.15.0 || 3.48.0 || 3.112.0 || 3.188.0 || 3.257.0 || 3.315.0 || 3.325.0 || >3.325.0 <4'
   commands:
     - node test/instrumentation/modules/@aws-sdk/client-s3.test.js
   node: '>=14'
