test: fix fastify TAV test failures
The TAV tests were failing on fastify@3 with this error:
    FastifyError [FST_ERR_PLUGIN_VERSION_MISMATCH]: fastify-plugin: @fastify/formbody - expected '4.x' fastify version, '3.29.5' is installed

The '@fastify/formbody' dep used in the sanitize-field-names/fastify.test.js
test file needs to match the fastify major version.

I am somewhat hesitant to add this change, because I think it might
make the fastify TAV tests much longer to run. Each version tested will
be doing an additional npm install step, which is slow.

--- a/.tav.yml
+++ b/.tav.yml
@@ -468,6 +468,9 @@ restify-v10-v12:
 # - #1086 suggests fastify@2.4.0 was a broken release, skip it.
 # - fastify@4.0.1 is broken: https://github.com/fastify/fastify/issues/3998#issuecomment-1153662513
 # - fastify@4.16.0 - 4.16.2 (inclusive) are broken releases
+# - Do not run "test/sanitize-field-names/fastify.test.js" for older fastify,
+#   because the test file uses '@fastify/formbody', which only has versions
+#   for fastify >=3.
 fastify-v1:
   name: fastify
   versions: '1.x'
@@ -476,7 +479,6 @@ fastify-v1:
     - node test/instrumentation/modules/fastify/fastify.test.js
     - node test/instrumentation/modules/fastify/async-await.test.js
     - node test/instrumentation/modules/fastify/set-framework.test.js
-    - node test/sanitize-field-names/fastify.test.js
 fastify-v2:
   name: fastify
   versions: '>=2.0.0 <2.4.0 || >2.4.0 <3'
@@ -485,10 +487,10 @@ fastify-v2:
     - node test/instrumentation/modules/fastify/fastify.test.js
     - node test/instrumentation/modules/fastify/async-await.test.js
     - node test/instrumentation/modules/fastify/set-framework.test.js
-    - node test/sanitize-field-names/fastify.test.js
 fastify-v3:
   name: fastify
   versions: '>=3.0.0 <4'
+  peerDependencies: '@fastify/formbody@^6.0.1'
   node: '>=10'
   commands:
     - node test/instrumentation/modules/fastify/fastify.test.js
@@ -498,6 +500,7 @@ fastify-v3:
 fastify:
   name: fastify
   versions: '>=4 <4.0.1 || >4.0.1 <4.16.0 || >4.16.2'
+  peerDependencies: '@fastify/formbody@^7'
   node: '>=14.6.0'
   commands:
     - node test/instrumentation/modules/fastify/fastify.test.js
