--- a/.github/workflows/tav-command.yml
+++ b/.github/workflows/tav-command.yml
@@ -1,39 +1,49 @@
 name: tav-command
 
 on:
-  issue_comment:
-    types: [created]
+  pull_request_review:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 
 permissions:
-  contents: write
-  pull-requests: write
+  contents: read
 
 jobs:
   command-validation:
-    if: github.event.issue.pull_request && startsWith(github.event.comment.body, '/test tav')
+    if: startsWith(github.event.review.body, '/test tav')
     runs-on: ubuntu-latest
     timeout-minutes: 5
+    permissions:
+      pull-requests: write
     outputs:
       versions: ${{ steps.transform.outputs.versions }}
       modules: ${{ steps.transform.outputs.modules }}
-      pull-request: ${{ steps.pr.outputs.number }}
     steps:
-      - name: Validate github comment
-        uses: elastic/apm-pipeline-library/.github/actions/validate-github-comment@main
-
-      - id: pr
-        name: Fetch PR
+      - name: Is comment allowed?
         uses: actions/github-script@v6
         with:
-          script: core.setOutput('number', context.payload.issue.number)
+          script: |
+            const actorPermission = (await github.rest.repos.getCollaboratorPermissionLevel({
+              ...context.repo,
+              username: context.actor
+            })).data.permission
+            const isPermitted = ['write', 'admin'].includes(actorPermission)
+            if (!isPermitted) {
+              const errorMessage = 'Only users with write permission to the repository can run GitHub commands'
+              await github.rest.issues.createComment({
+                ...context.repo,
+                issue_number: context.issue.number,
+                body: errorMessage,
+              })
+              core.setFailed(errorMessage)
+              return;
+            }
 
       - uses: actions/checkout@v3
         with:
-          ref: refs/pull/${{ steps.pr.outputs.number }}/merge
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - id: transform
         name: Transform comment to the supported matrix
@@ -51,7 +61,7 @@ jobs:
               core.setFailed(`Error loading './.ci/tav.json': ${err}`)
               return
             }
-            const comment = context.payload.comment.body
+            const comment = context.payload.review.body
             if (comment !== '/test tav') {
               const regex = /\/test tav ([^\s]+)(\s*)([^\s]*)/
               const match = comment.match(regex)
@@ -71,17 +81,6 @@ jobs:
             core.setOutput('modules', modules)
             core.setOutput('versions', versions)
 
-      - name: Notify - failure
-        if: failure()
-        uses: actions/github-script@v6
-        with:
-          script: |
-            await github.rest.reactions.createForIssueComment({
-              ...context.repo,
-              comment_id: context.payload.comment.id,
-              content: '-1',
-            })
-
   test-tav:
     needs: command-validation
     runs-on: ubuntu-latest
@@ -96,33 +95,8 @@ jobs:
 
       - uses: actions/checkout@v3
         with:
-          ref: refs/pull/${{ needs.command-validation.outputs.pull-request }}/merge
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - run: .ci/scripts/test.sh -b "release" -t "${{ matrix.module }}" "${{ matrix.node }}"
         env:
           ELASTIC_APM_CONTEXT_MANAGER: ''
-
-      ##
-      ## POST-BUILD notifications
-      ##
-      - name: Notify - success
-        if: success()
-        uses: actions/github-script@v6
-        with:
-          script: |
-            await github.rest.reactions.createForIssueComment({
-              ...context.repo,
-              comment_id: context.payload.comment.id,
-              content: 'heart',
-            })
-
-      - name: Notify - failure
-        if: failure()
-        uses: actions/github-script@v6
-        with:
-          script: |
-            await github.rest.reactions.createForIssueComment({
-              ...context.repo,
-              comment_id: context.payload.comment.id,
-              content: '-1',
-            })
