--- a/.github/workflows/tav.yml
+++ b/.github/workflows/tav.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - id: transform
-        name: Transform comment to the supported matrix
+        name: Load matrix from tav.json
         uses: actions/github-script@v6
         with:
           script: |
