test: convert sqs.test.js over to use localstack for end-to-end tests (similar to s3.test.js)
This is mostly complete. There are a few XXXs to deal with.
The blocker for now is, IIUC, that localstack doesn't currently support
SQS using the JSON protocol -- see https://github.com/localstack/localstack/pull/8268

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -105,7 +105,7 @@ jobs:
       localstack:
         image: localstack/localstack:0.12.12
         env:
-          LOCALSTACK_SERVICES: 's3'
+          LOCALSTACK_SERVICES: 's3,sqs'
           DATA_DIR: '/var/lib/localstack'
         ports:
           - "4566:4566"
