--- a/.ci/docker/docker-compose.yml
+++ b/.ci/docker/docker-compose.yml
@@ -121,7 +121,7 @@ services:
     # https://hub.docker.com/r/localstack/localstack/tags
     image: localstack/localstack:0.12.12
     environment:
-      - LOCALSTACK_SERVICES=s3
+      - LOCALSTACK_SERVICES=s3,sqs
       - DATA_DIR=/var/lib/localstack
     ports:
       - "4566:4566"
