--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "backport": "backport",
     "docs:open": "PREVIEW=1 npm run docs:build",
     "docs:build": "./docs/scripts/build_docs.sh apm-agent-nodejs ./docs ./build",
-    "lint": "npm run lint:eslint && npm run lint:license-files && npm run lint:yaml-files && npm run lint:tav-json",
+    "lint": "npm run lint:eslint && npm run lint:license-files && npm run lint:yaml-files && npm run lint:tav",
     "lint:eslint": "eslint .  # requires node >=8.10",
     "lint:fix": "eslint --fix .  # requires node >=8.10",
     "lint:license-files": "./dev-utils/gen-notice.sh --lint .  # requires node >=16",
