--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "backport": "backport",
     "docs:open": "PREVIEW=1 npm run docs:build",
     "docs:build": "./docs/scripts/build_docs.sh apm-agent-nodejs ./docs ./build",
-    "lint": "npm run lint:eslint && npm run lint:license-files && npm run lint:yaml-files",
+    "lint": "npm run lint:eslint && npm run lint:license-files && npm run lint:yaml-files && npm run lint:tav",
     "lint:eslint": "eslint .  # requires node >=8.10",
     "lint:fix": "eslint --fix .  # requires node >=8.10",
     "lint:license-files": "./dev-utils/gen-notice.sh --lint .  # requires node >=16",
     "lint:yaml-files": "./dev-utils/lint-yaml-files.sh  # requires node >=10",
+    "lint:tav": "./dev-utils/lint-tav-json.js",
     "coverage": "COVERAGE=true ./test/script/run_tests.sh",
     "test": "./test/script/run_tests.sh",
     "test:deps": "dependency-check index.js start.js start-next.js 'lib/**/*.js' 'test/**/*.js' '!test/activation-method/fixtures' '!test/instrumentation/azure-functions/fixtures' '!test/instrumentation/modules/next/a-nextjs-app' '!test/opentelemetry-bridge' '!test/opentelemetry-metrics/fixtures' --no-dev -i async_hooks -i perf_hooks -i node:http -i @azure/functions-core",
