--- a/.tav.yml
+++ b/.tav.yml
@@ -187,7 +187,11 @@ knex-v0.21-v1:
   node: '>=10.22.0'
   versions: '0.21.21 || 0.95.15' # latest minors subset of '>=0.21 <1'
   commands: node test/instrumentation/modules/pg/knex.test.js
-
+knex-v1-v2:
+  name: knex
+  node: '>=12.0.0'
+  versions: '>=1 <2'
+  commands: node test/instrumentation/modules/pg/knex.test.js
 ws-old:
   name: ws
   versions: '>=1 <7'
