--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -93,7 +93,7 @@ jobs:
         image: docker.elastic.co/elasticsearch/elasticsearch:8.7.1
         env:
           ES_JAVA_OPTS: '-Xms512m -Xmx512m'
-          network.host: ''
+          network.host: '_site_'
           transport.host: '127.0.0.1'
           http.host: '0.0.0.0'
           xpack.security.enabled: 'false'
