--- a/.tav.yml
+++ b/.tav.yml
@@ -187,10 +187,10 @@ knex-v0.21-v1:
   node: '>=10.22.0'
   versions: '0.21.21 || 0.95.15' # latest minors subset of '>=0.21 <1'
   commands: node test/instrumentation/modules/pg/knex.test.js
-knex-v1-v2:
+knex-v1-v3:
   name: knex
   node: '>=12.0.0'
-  versions: '>=1 <2'
+  versions: '1.0.7 || 2.4.2' # latest minors subset of '>=1 <3'
   commands: node test/instrumentation/modules/pg/knex.test.js
 ws-old:
   name: ws
