--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
   },
   "ignorePatterns": [
     "/*.example.js", // a pattern for uncommited local dev files to avoid linting
+    "/*.example.mjs", // a pattern for uncommited local dev files to avoid linting
     "/.nyc_output",
     "/build",
     "node_modules",
