--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "docs:open": "PREVIEW=1 npm run docs:build",
     "docs:build": "./docs/scripts/build_docs.sh apm-agent-nodejs ./docs ./build",
     "lint": "npm run lint:eslint && npm run lint:license-files && npm run lint:yaml-files && npm run lint:tav",
-    "lint:eslint": "eslint .  # requires node >=8.10",
-    "lint:fix": "eslint --fix .  # requires node >=8.10",
+    "lint:eslint": "eslint --ext=js,mjs,cjs .  # requires node >=8.10",
+    "lint:fix": "eslint --ext=js,mjs,cjs --fix .  # requires node >=8.10",
     "lint:license-files": "./dev-utils/gen-notice.sh --lint .  # requires node >=16",
     "lint:yaml-files": "./dev-utils/lint-yaml-files.sh  # requires node >=10",
     "lint:tav": "./dev-utils/lint-tav-json.js",
@@ -103,6 +103,7 @@
     "escape-string-regexp": "^4.0.0",
     "fast-safe-stringify": "^2.0.7",
     "http-headers": "^3.0.2",
+    "import-in-the-middle": "1.3.5",
     "is-native": "^1.0.1",
     "lru-cache": "^6.0.0",
     "measured-reporting": "^1.51.1",
