--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,9 @@
     "/test/types/transpile/index.js",
     "/test/types/transpile-default/index.js",
     "/test_output",
-    "tmp"
+    "tmp",
+    // These files use top-level await, which is *fine* for ESM files but, IIUC,
+    // not supported by eslint until v8.
+    "/test/instrumentation/modules/fixtures/use-fastify.mjs"
   ]
 }
