--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -180,3 +180,20 @@ jobs:
     - run: npm ls --all || true
     # Run a subset of tests that we can reasonably get running on Windows CI.
     - run: node test/test.js
+
+  # single status check that can be set as required in branch protection rules.
+  # success if all jobs listed in "needs" are successful.
+  # failure if at least one job listin "needs" is not successful.
+  test:
+    if: always()
+    runs-on: ubuntu-latest
+    needs:
+      - lint
+      - test-vers
+      - test-windows
+    steps:
+      - id: check
+        uses: elastic/apm-pipeline-library/.github/actions/check-dependent-jobs@current
+        with:
+          needs: ${{ toJSON(needs) }}
+      - run: ${{ steps.check.outputs.isSuccess }}
