ci: fix comment

--- a/.github/workflows/test-docs.yml
+++ b/.github/workflows/test-docs.yml
@@ -1,5 +1,5 @@
 ---
-# This workflow sets the test / all status check to success in case it's a docs only PR and test.yml is not triggered
+# This workflow sets the "test" status check to success in case it's a docs only PR and test.yml is not triggered
 # https://docs.github.com/en/repositories/configuring-branches-and-merges-in-your-repository/defining-the-mergeability-of-pull-requests/troubleshooting-required-status-checks#handling-skipped-but-required-checks
 name: test # The name must be the same as in test.yml
 
