--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "docs:open": "PREVIEW=1 npm run docs:build",
     "docs:build": "./docs/scripts/build_docs.sh apm-agent-nodejs ./docs ./build",
     "lint": "npm run lint:eslint && npm run lint:license-files && npm run lint:yaml-files && npm run lint:tav",
-    "lint:eslint": "eslint .  # requires node >=8.10",
-    "lint:fix": "eslint --fix .  # requires node >=8.10",
+    "lint:eslint": "eslint . # requires node >12.20.0",
+    "lint:fix": "eslint --fix .  # requires node >12.20.0",
     "lint:license-files": "./dev-utils/gen-notice.sh --lint .  # requires node >=16",
     "lint:yaml-files": "./dev-utils/lint-yaml-files.sh  # requires node >=10",
     "lint:tav": "./dev-utils/lint-tav-json.js",
@@ -148,13 +148,12 @@
     "dependency-check": "^4.1.0",
     "diagnostics_channel": "^1.1.0",
     "elasticsearch": "^16.7.3",
-    "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint": "^8.42.0",
+    "eslint-config-standard": "^16",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-license-header": "^0.6.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-standard": "^4.1.0",
+    "eslint-plugin-promise": "^6.1.1",
     "express": "^4.17.1",
     "express-queue": "^0.0.13",
     "fastify": "^4.16.3",
