also we can stop skipping these files with top-level await now that we are on eslint@8

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,10 +41,6 @@
     "/test/types/transpile/index.js",
     "/test/types/transpile-default/index.js",
     "/test_output",
-    "tmp",
-    // These files use top-level await, which is *fine* for ESM files but, IIUC,
-    // not supported by eslint until v8.
-    "/test/instrumentation/modules/fixtures/use-fastify.mjs",
-    "/test/instrumentation/modules/http/fixtures/use-dynamic-import.mjs"
+    "tmp"
   ]
 }
