chore: update TAV

--- a/.tav.yml
+++ b/.tav.yml
@@ -512,18 +512,27 @@ aws-sdk:
     - node test/instrumentation/modules/aws-sdk/sqs.test.js
     - node test/instrumentation/modules/aws-sdk/dynamodb.test.js
 
+# For all AWS-SDK clients want this version range:
+#   versions: '>=3.15.0 <4'
+# However, @awk-sdk/client-* releases *very* frequently (almost every day) and there
+# is no need to test *all* those releases. Instead we statically list a subset
+# of versions to test.
 '@aws-sdk/client-s3':
-  # We want this version range:
-  #   versions: '>=3.15.0 <4'
-  # However, @awk-sdk/client-s3 releases *very* frequently (almost every day) and there
-  # is no need to test *all* those releases. Instead we statically list a subset
-  # of versions to test.
-  #
   # Maintenance note: This should be updated periodically using:
-  #   ./dev-utils/aws-sdk-s3-client-tav-versions.sh
+  #   node ./dev-utils/tav-versions.js @aws-sdk/client-s3 ">=3.15.0 <4"
   #
   # Test v3.15.0, every N=37 of 191 releases, and current latest.
   versions: '3.15.0 || 3.48.0 || 3.112.0 || 3.188.0 || 3.257.0 || 3.315.0 || 3.325.0 || >3.325.0 <4'
+  commands:
+    - node test/instrumentation/modules/@aws-sdk/client-s3.test.js
+  node: '>=14'
+
+'@aws-sdk/client-dynamodb':
+  # Maintenance note: This should be updated periodically using:
+  #   node ./dev-utils/tav-versions.js @aws-sdk/client-dynamodb ">=3.15.0 <4"
+  #
+  # Test v3.15.0, every N=41 of 210 releases, and current latest.
+  versions: '3.15.0 || 3.53.0 || 3.154.0 || 3.216.0 || 3.294.0 || 3.360.0 || 3.370.0 || >3.370.0 <4'
   commands:
     - node test/instrumentation/modules/@aws-sdk/client-s3.test.js
   node: '>=14'
