style: switch to prettier
just the config changes

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "docs:open": "PREVIEW=1 npm run docs:build",
     "docs:build": "./docs/scripts/build_docs.sh apm-agent-nodejs ./docs ./build",
     "lint": "npm run lint:eslint && npm run lint:license-files && npm run lint:yaml-files && npm run lint:tav",
-    "lint:eslint": "eslint --ext=js,mjs,cjs . # requires node >=16.0.0",
+    "lint:eslint": "eslint --ext=js,mjs,cjs --rule 'prettier/prettier: off' . # requires node >=16.0.0",
     "lint:fix": "eslint --ext=js,mjs,cjs --fix .  # requires node >=16.0.0",
     "lint:license-files": "./dev-utils/gen-notice.sh --lint .  # requires node >=16",
     "lint:yaml-files": "./dev-utils/lint-yaml-files.sh  # requires node >=10",
@@ -150,10 +150,10 @@
     "diagnostics_channel": "^1.1.0",
     "elasticsearch": "^16.7.3",
     "eslint": "^8.42.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-license-header": "^0.6.0",
     "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
     "express": "^4.17.1",
     "express-queue": "^0.0.13",
@@ -185,6 +185,7 @@
     "nyc": "^15.0.0",
     "once": "^1.4.0",
     "pg": "^8.7.1",
+    "prettier": "^3.0.0",
     "pug": "^3.0.1",
     "redis": "^4.3.0",
     "request": "^2.88.2",
