chore: include http apm client

--- a/package.json
+++ b/package.json
@@ -90,17 +90,19 @@
     "@opentelemetry/core": "^1.11.0",
     "@opentelemetry/sdk-metrics": "^1.12.0",
     "after-all-results": "^2.0.0",
+    "agentkeepalive": "^4.2.1",
     "async-cache": "^1.1.0",
     "async-value-promise": "^1.1.1",
     "basic-auth": "^2.0.1",
+    "breadth-filter": "^2.0.0",
     "cookie": "^0.5.0",
     "core-util-is": "^1.0.2",
-    "elastic-apm-http-client": "12.0.0",
     "end-of-stream": "^1.4.4",
     "error-callsites": "^2.0.4",
     "error-stack-parser": "^2.0.6",
     "escape-string-regexp": "^4.0.0",
     "fast-safe-stringify": "^2.0.7",
+    "fast-stream-to-buffer": "^1.0.0",
     "http-headers": "^3.0.2",
     "import-in-the-middle": "1.3.5",
     "is-native": "^1.0.1",
@@ -112,12 +114,14 @@
     "object-identity-map": "^1.0.2",
     "original-url": "^1.2.3",
     "pino": "^6.11.2",
+    "readable-stream": "^3.4.0",
     "relative-microtime": "^2.0.0",
     "require-in-the-middle": "^7.1.1",
     "semver": "^6.3.1",
     "shallow-clone-shim": "^2.0.0",
     "source-map": "^0.8.0-beta.0",
     "sql-summary": "^1.0.1",
+    "stream-chopper": "^3.0.1",
     "unicode-byte-truncate": "^1.0.0"
   },
   "devDependencies": {
