--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,7 @@
     "plugin:prettier/recommended"
   ],
   "plugins": [
-    // Note: we've dropped the eslint-plugin-import usage from standardjs, fow now.
+    "import",
     "license-header",
     "prettier",
     "promise",
@@ -75,7 +75,14 @@
     ],
 
     // Undo this config from eslint:recommended for now (standardjs didn't have it.)
-    "require-yield": [ "off" ]
+    "require-yield": [ "off" ],
+
+    "import/export": "error",
+    "import/first": "error",
+    "import/no-absolute-path": ["error", { "esmodule": true, "commonjs": true, "amd": false }],
+    "import/no-duplicates": "error",
+    "import/no-named-default": "error",
+    "import/no-webpack-loader-syntax": "error"
   },
   "ignorePatterns": [
     "/*.example.js", // a pattern for uncommited local dev files to avoid linting
